--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "vite": "^5.1.3"
   },
   "dependencies": {
-    "@arcgis/core": "4.31.01",
-    "@esri/calcite-components": "^2.13.0"
+    "@arcgis/core": "~4.32.0",
+    "@esri/calcite-components": "^3.0.3"
   }
 }
